# SchokoVM

./: .gdbinit  .gitignore  CMakeLists.txt  FibonacciIter.java  FibonacciIterBig.java  FibonacciRec.java  JvmSpecNotes.md  README.md  compare.sh  run-benchmarks.sh
.github/workflows/: cmake.yml  tests.yml
jdk/: .gitignore  cleanup.sh  download.sh
src/: args.cpp  args.hpp  classfile.hpp  classloading.cpp  classloading.hpp  data.hpp  exceptions.cpp  exceptions.hpp  future.hpp  interpreter.cpp  interpreter.hpp  jar.cpp  jar.hpp  jni.cpp  jvm.cpp  main.cpp  math.hpp  memory.cpp  memory.hpp  native-test.cpp  native.cpp  native.hpp  object.hpp  opcodes.hpp  parser.cpp  parser.hpp  string.cpp  string.hpp  types.hpp  unsafe.cpp  unsafe.hpp  util.cpp  util.hpp  zip.cpp  zip.hpp
src/libjvm/: jni.cpp  jvm.cpp  jvm_constants.h
tests/: AWTTest.java  Annotations.java  ArrayCopy.java  Assertions.java  Bitwise.java  Boxing.java  Clazz.java  Clone.java  Collections.java  Empty.java  Exceptions.java  ExceptionsConstruct.java  ExceptionsExit.java  ExceptionsExitNested.java  ExceptionsInheritance.java  Fields.java  GarbageCollection.java  HelloWorld.java  Initialization.java  Instanceof.java  InvokeMethodHandle.java  InvokeStatic.java  KarelTheRobot.java  Methods.java  MethodsStatic.java  MethodsVirtualInterface.java  MultiArrays.java  Native.java  NativeLib.cpp  ObjectArray.java  PropertiesTest.java  ReferenceComparisons.java  ReflectionTest.java  Strings.java  Switch.java  UnitArithmetic.java  UnitArithmeticInt.java  UnitArithmeticOverflow.java  UnitBoolean.java
tests-generated/: Generator.java
